test/lexer/error/err_05_unclosed_comment_block.pl0
program unclosed_block;
/* This comment never ends
begin
end
